changes made to user story 197

--- a/G4L.UserManagement.API/appsettings.Development.json
+++ b/G4L.UserManagement.API/appsettings.Development.json
@@ -15,5 +15,8 @@
     "LeaveDaysPerMonth": 1.25,
     "MaxSickAllowed": 30.0,
     "MaxFamilyResponsibility": 3.0
-  }
+  },
+  "ClientId": "201979350530-u06m18midj3oaln17kh7v4003k6ammub.apps.googleusercontent.com",
+  "ClientSecret": "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"
+
 }
