Added changes to user story 197

--- a/G4L.UserManagement.API/G4L.UserManagement.API.csproj
+++ b/G4L.UserManagement.API/G4L.UserManagement.API.csproj
@@ -41,4 +41,8 @@
     <ProjectReference Include="..\G4L.UserManagement.DA\G4L.UserManagement.DA.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FileDownloaded\" />
+  </ItemGroup>
+
 </Project>
