Pushing up code.

--- a/G4L.UserManagement.API/G4L.UserManagement.API.csproj
+++ b/G4L.UserManagement.API/G4L.UserManagement.API.csproj
@@ -5,9 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder1\**" />
+    <Compile Remove="NewFolder\**" />
     <Compile Remove="Views\**" />
+    <Content Remove="NewFolder1\**" />
+    <Content Remove="NewFolder\**" />
     <Content Remove="Views\**" />
+    <EmbeddedResource Remove="NewFolder1\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
     <EmbeddedResource Remove="Views\**" />
+    <None Remove="NewFolder1\**" />
+    <None Remove="NewFolder\**" />
     <None Remove="Views\**" />
   </ItemGroup>
 
