--- a/G4L.UserManagement.BL/G4L.UserManagement.BL.csproj
+++ b/G4L.UserManagement.BL/G4L.UserManagement.BL.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\NewFolder1\**" />
+    <Compile Remove="Models\NewFolder\**" />
+    <EmbeddedResource Remove="Models\NewFolder1\**" />
+    <EmbeddedResource Remove="Models\NewFolder\**" />
+    <None Remove="Models\NewFolder1\**" />
+    <None Remove="Models\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Entities\AccessLevel.cs" />
     <Compile Remove="Entities\Questionnaire.cs" />
   </ItemGroup>
