commiting the changes

--- a/G4L.UserManagement.UI/package.json
+++ b/G4L.UserManagement.UI/package.json
@@ -26,8 +26,8 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "mdb-angular-ui-kit": "^2.3.0",
-    "ng2-search-filter": "^0.5.1",
     "ng2-charts": "^3.1.2",
+    "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^14.3.0",
     "popper.js": "^1.16.1",
     "ramda": "^0.28.0",
@@ -40,6 +40,7 @@
     "@angular/cli": "~13.3.9",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "@types/ramda": "^0.28.15",
     "jasmine-core": "~4.0.0",
