--- a/G4L.UserManagement.UI/package.json
+++ b/G4L.UserManagement.UI/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@popperjs/core": "^2.11.6",
+    "angular2-multiselect-dropdown": "^5.0.4",
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "firebase": "^9.12.1",
@@ -29,6 +30,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mdb-angular-ui-kit": "^2.3.0",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ng2-charts": "^3.1.2",
     "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^14.3.0",
